[gd_scene load_steps=7 format=3 uid="uid://bv7yxqdyvli2h"]

[ext_resource type="Texture2D" uid="uid://dei1fx7ju34om" path="res://assets/Background/Background2.png" id="1_5agwy"]
[ext_resource type="Script" path="res://scripts/level.gd" id="1_awfbu"]
[ext_resource type="PackedScene" uid="uid://ckwo82ibqy63g" path="res://scenes/birdy_boi.tscn" id="2_yall5"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="4_p0yid"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_36kol"]
distance = 18.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_a1qu5"]
distance = -428.0

[node name="Level" type="Node2D" node_paths=PackedStringArray("pipe_node")]
script = ExtResource("1_awfbu")
pipe_node = NodePath("Pipes")

[node name="PauseScriptNode" type="Node" parent="."]
process_mode = 3
script = ExtResource("4_p0yid")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(3, 3)
motion_mirroring = Vector2(256, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(2, 3)
scale = Vector2(1, 2)
texture = ExtResource("1_5agwy")
centered = false

[node name="BirdyBoi" parent="." instance=ExtResource("2_yall5")]
position = Vector2(143, 202)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(143, 202)
zoom = Vector2(2.35, 2.939)

[node name="Pipes" type="Node" parent="."]

[node name="SpawnTimer" type="Timer" parent="Pipes"]
one_shot = true

[node name="SpawnPoint" type="Node2D" parent="Pipes"]
position = Vector2(300, 203)

[node name="Top2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top2"]
position = Vector2(0, -8)
rotation = -3.14159
shape = SubResource("WorldBoundaryShape2D_36kol")

[node name="Bottom2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom2"]
position = Vector2(1, -30)
shape = SubResource("WorldBoundaryShape2D_a1qu5")

[node name="ScoreLabel" type="Label" parent="."]
z_index = 10
offset_left = 5.0
offset_top = 8.0
offset_right = 279.0
offset_bottom = 31.0
text = "Score: 0"
horizontal_alignment = 1
